...
      });
    }
  }

  @override
  Widget build(BuildContext context) => AuthScaffold(
    title: 'Welcome\nback.',
    subtitle: 'Your wardrobe has been waiting for you.',
    child: Form(
      key: _formKey,
      child: Column(
        crossAxisAlignment: CrossAxisAlignment.start,
        children: [
...
