...
      : _strength < .75
      ? 'Good password'
      : 'Strong password';

  @override
  Widget build(BuildContext context) => AuthScaffold(
    title: 'Create\naccount.',
    subtitle: 'Build a smarter relationship with the clothes you own.',
    child: Form(
      key: _formKey,
      child: Column(
        crossAxisAlignment: CrossAxisAlignment.start,
        children: [
...
